# OmniSTEval

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
examples/short_form_degenerate_policy_example/: evaluate.sh  exp.py  hypotheses.txt  references.txt  text_segmentation.txt
examples/short_form_degenerate_policy_example/evaluation_output/: evaluation_report.txt  scores.tsv
examples/simulstream_example/: cfg.yaml  evaluate.sh  simulstream_log.jsonl
examples/simulstream_example/segmentation_output/: evaluation_report.txt  instances.resegmented.jsonl  scores.tsv
examples/speech_resegmentation_example/: resegment.sh
examples/speech_resegmentation_example/segmentation_output/: evaluation_report.txt  instances.resegmented.jsonl  scores.tsv
examples/text_resegmentation_example/: resegment.sh
examples/text_resegmentation_example/segmentation_output/: evaluation_report.txt  instances.resegmented.jsonl  scores.tsv
omnisteval/: __init__.py  alignment.py  cli.py  data.py  io.py  resegment.py  scoring.py  tokenization.py
